fixed script url bug and added README

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <script type="text/javascript">
     var test_script = document.createElement('script');
     test_script.type = "text/javascript";
-    test_script.src = "file:///Users/Ryan/Workspace/sandbox/index.html";
+    test_script.src = "file:///Users/Ryan/Workspace/sandbox/test1.js";
     document.getElementsByTagName('head')[0].appendChild(test_script);
     
   </script>
