--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href=styles.css"" />
+    <link rel="stylesheet" type="text/css" href="styles.css" />
     <script type="text/javascript">
     var test_script = document.createElement('script');
     test_script.type = "text/javascript";
